--- a/style.css
+++ b/style.css
@@ -27,3 +27,26 @@ body {
 .phone-image {
   width: 520px;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: white;
+  padding: 20px;
+}
+
+.form img {
+  width: 400px;
+}
+
+.form input {
+  width: 100%;
+  margin: 5px 20px;
+  height: 50px;
+  padding: 10px;
+  outline: none;
+  border: 1px solid var(--secondary-text-color);
+  background: var(--bg-color);
+  border-radius: 2px;
+}
